--- a/styles.css
+++ b/styles.css
@@ -38,11 +38,12 @@ header li {
 
 header li a {
     color: #000000;
+    font-size: 24px;
 }
 
 .banner {
     background-image: url("images/gb.jpg");
-    width: 1920px;
+    width: 100%;
     height: 400px;
 }
 
